1.03	2011-0?-??
        - API changes
          - IRatingPredictor
           - Add() is now AddRating()
           - remove AddUser() and AddItem()
	- recommenders
          - new rating predictor BiasedMatrixFactorizationMAE, which is BMF
            optimized for MAE instead of RMSE
          - BiasedMatrixFactorization: fixed a wrong constant factor in
            ComputeLoss()
          - BPRMF: add optional bold driver heuristic for learn rate adaptation
	- command-line tools
          - write out predictions every N iterations with --prediction-file=F
            and --find-iter=N (bug reported by Alejandro Bellogin)
          - write loading time to STDERR, not STDOUT
	- evaluation
          - RatingEval
            - add EvaluateOnline() method
            - rename RatingPredictionMeasures to Measures
          - ItemPredictionEval
            - add EvaluateOnline() method
            - rename ItemPredictionMeasures to Measures
        - data structures
          - add interfaces IBooleanMatrix and IPosOnlyFeedback
          - make PosOnlyFeedback generic to allow different backends
          - add SparseBooleanMatrixBinarySearch and SparseBooleanMatrixStatic
          - IMatrix<T> interface: add Transpose() method
          - SparseBooleanMatrix: remove Rows() method (not necessary)
          - Matrix<T>: perform bounds check only when DEBUG is set;
            faster GetRow()/SetRow(); generic return types
          - MatrixUtils: remove ContainsNaN()
          - VectorUtils: add L1Norm()
          - fix bug in Ratings that prevented online updates to work properly
            (reported by Chris Newell)
	- documentation
          - some API doc improvements
          - get rid of the word 'engine', as it usually carries no relevant
            information

1.02	2011-05-24
	- recommenders
          - BPR_Linear: less verbose output
          - BPRMF: fix loading/saving of models
          - BiasedMatrixFactorization: simplify a bit